[tool.poetry]
name = "ls"
version = "0.1.0"
description = ""
authors = ["namihira33 <syuntakosu1011@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.4.2"
torch = "^1.11.0.dev20220124+cu113"
torchvision = "^0.12.0.dev20220124+cu113"
sklearn = "^0.0"
tqdm = "^4.61.2"
ipykernel = "^6.0.1"
skorch = "^0.10.0"
pandas = "^1.3.3"
tensorflow = "^2.6.0"
tensorboard = "^2.6.0"
tensorboardX = "^2.4"
seaborn = "^0.11.2"
pytorch-gradcam = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
